--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,10 @@ body
 {
     background-color:rgb(225, 225, 225);
     text-decoration-color: black;
-
+    background-image: url("image/phone.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
 }
 h1
 {
@@ -12,10 +15,11 @@ h1
 {
     background-color:rgb(255,255,255);
     position: absolute;
-    width: 80%;
-    right: 10%;
-    left: 10%;
-    height: 90%;
+    width: 61%;
+    right: 19%;
+    left: 20%;
+    height: 76%;
+    top:9.8%;
     border: 3px solid rgb(6, 4, 100);
     padding: 15px;
 }
