--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,67 @@ h1
     border: 3px solid rgb(6, 4, 100);
     padding: 15px;
 }
+
+#phone-camera {
+
+    background-image: url("image/car-dashcam.png");
+    position: absolute;
+    /* position: relative; */
+    width: 61%;
+    right: 19%;
+    left: 20%;
+    height: 76%;
+    top:9.8%;
+    border: 3px solid rgb(6, 4, 100);
+    padding: 15px;
+    
+}
+
+.cameraview {
+
+    border: 5px solid black;
+    width: 50%;
+    height: 20%;
+    padding: 15% 15%;
+    margin: 8% auto;
+
+}
+
+.record {
+
+    font: 1vw "Arial Black"; 
+    margin-top: 2%;
+    margin-left: 40%;
+    margin-right: 40%;
+    padding: 4%;
+    position: relative;
+    /* position: absolute; */
+    vertical-align: bottom;
+    height: 50%;
+    background-color: red;
+    color: white;
+    border: 5px solid black;
+    border-radius: 50%;
+
+}
+
+.controls {
+
+
+
+}
+
+#cameralogs {
+
+    padding: 1% 2%;
+    margin: 5%;
+    width: 10%;
+    height: 2%;
+    border: 5px solid black;
+    float: right;
+    font: 1vw "Arial Black";
+    text-align: center;
+}
 #home_left
 {
     box-sizing: border-box;
