--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,7 @@ body
 h1
 {
     text-decoration: bold;
+    text-align: center;
 }
 #phone
 {
@@ -18,4 +19,10 @@ h1
     height: 50%;
     border: 3px solid rgb(6, 4, 100);
     padding: 15px;
+}
+#dotw
+{
+    margin-top: 10%;
+    text-align: center;
+    word-spacing: 2rem;
 }
