--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,75 @@
 body
 {
-    background-color:rgb(127, 127, 127);
+    background-color:rgb(225, 225, 225);
     text-decoration-color: black;
-
+    background-image: url("image/phone.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
 }
 h1
 {
     text-decoration: bold;
-    text-align: center;
 }
 #phone
 {
     background-color:rgb(255,255,255);
     position: absolute;
-    width: 60%;
-    right: 15%;
-    left: 15%;
-    height: 50%;
+    width: 61%;
+    right: 19%;
+    left: 20%;
+    height: 76%;
+    top:9.8%;
     border: 3px solid rgb(6, 4, 100);
     padding: 15px;
+}
+#home_left
+{
+    box-sizing: border-box;
+    padding: 1%;
+    position: absolute;
+    width: 50.5%;
+    left: -3px;
+    height: 55%;
+    top: 10%;
+    bottom: 10%;
+    border: 3px solid rgb(6, 4, 100);
+    border-top: 3px solid rgb(6, 4, 100);
+    border-bottom: 3px solid rgb(6, 4, 100);
+}
+#home_right{
+    box-sizing: border-box;
+    padding: 1%;
+    position: absolute;
+    width: 50.5%;
+    right: -3px;
+    height: 55%;
+    top: 10%;
+    bottom: 10%;
+    border-top: 3px solid rgb(6, 4, 100);
+    border-bottom: 3px solid rgb(6, 4, 100);
+    border-left: 3px solid rgb(6, 4, 100);
+}
+#home_top{
+    background-color:rgb(127,127,127);
+
+    box-sizing: border-box;
+    position: absolute;
+    width:100%;
+    left:0%;
+    top: 0%;
+    bottom: 90%;
+}
+#home_bottom{
+    box-sizing: border-box;
+    padding:1%;
+    position: absolute;
+    height:35%;
+    bottom: 0%;
+}
+#menu_button
+{
+    
 }
 #dotw
 {
