--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ body
 h1
 {
     text-decoration: bold;
+    text-align: center;
 }
 #phone
 {
@@ -67,13 +68,28 @@ h1
     height:35%;
     bottom: 0%;
 }
-#menu_button
-{
-    
-}
 #dotw
 {
-    margin-top: 10%;
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 16.5%;
     text-align: center;
-    word-spacing: 2rem;
+    word-spacing: 3rem;
+}
+#dotw_icons
+{
+    position: absolute;
+    margin-top: 24%;
+    margin-left: 14.5%;
+    height: 50%;
+    word-spacing: .5rem;
+}
+#dotw_temps
+{
+    position: absolute;
+    font-size: 1.9rem;
+    margin-top: 33%;
+    margin-left: 17%;
+    text-align: center;
+    word-spacing: 2.75rem;
 }
