--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ h1
 
     background-image: url("image/car-dashcam.png");
     position: absolute;
-    /* position: relative; */
+    /* position: fixed; */
     width: 61%;
     right: 19%;
     left: 20%;
@@ -55,15 +55,17 @@ h1
     margin-top: 2%;
     margin-left: 40%;
     margin-right: 40%;
-    padding: 4%;
+    padding: 2% 1%;
     position: relative;
     /* position: absolute; */
-    vertical-align: bottom;
+    vertical-align: top;
+    text-decoration: none;
     height: 50%;
     background-color: red;
     color: white;
     border: 5px solid black;
     border-radius: 50%;
+    clear: left;
 
 }
 
@@ -76,14 +78,58 @@ h1
 #cameralogs {
 
     padding: 1% 2%;
-    margin: 5%;
-    width: 10%;
-    height: 2%;
+    width: 25%;
+    height: 30%;
     border: 5px solid black;
     float: right;
     font: 1vw "Arial Black";
     text-align: center;
+    overflow: hidden;
 }
+
+.cameralogbtn {
+	-moz-box-shadow: 3px 4px 0px 0px #899599;
+	-webkit-box-shadow: 3px 4px 0px 0px #899599;
+	box-shadow: 3px 4px 0px 0px #899599;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #bab1ba));
+	background:-moz-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:-webkit-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:-o-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:-ms-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba',GradientType=0);
+	background-color:#ededed;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+	display:inline-block;
+	cursor:pointer;
+	color:#3a8a9e;
+	font-family:Arial;
+	font-size:17px;
+	padding:7px 25px;
+	text-decoration:none;
+    text-shadow:0px 1px 0px #e1e2ed;
+    float: right;
+    margin: 1% 1%;
+}
+
+.cameralogbtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bab1ba), color-stop(1, #ededed));
+	background:-moz-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:-webkit-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:-o-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:-ms-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bab1ba', endColorstr='#ededed',GradientType=0);
+	background-color:#bab1ba;
+}
+.cameralogbtn:active {
+	position:relative;
+	top:1px;
+}
+
 #home_left
 {
     box-sizing: border-box;
