--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,6 +39,21 @@ h1
     
 }
 
+#phone-facerecognition {
+
+    background-image: url("image/facerecognition-ladyselfie.jpg");
+    position: absolute;
+    /* position: fixed; */
+    width: 61%;
+    right: 19%;
+    left: 20%;
+    height: 76%;
+    top:9.8%;
+    border: 3px solid rgb(6, 4, 100);
+    padding: 15px;
+
+}
+
 .cameraview {
 
     border: 5px solid black;
@@ -55,12 +70,11 @@ h1
     margin-top: 2%;
     margin-left: 40%;
     margin-right: 40%;
+    top: 80%;
     padding: 2% 1%;
-    position: relative;
-    /* position: absolute; */
+    position: absolute;
     vertical-align: top;
     text-decoration: none;
-    height: 50%;
     background-color: red;
     color: white;
     border: 5px solid black;
