--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,10 @@ h1
 {
     text-decoration: bold;
 }
+a.menu{
+    color: #101010;
+    text-shadow:-1px -1px #909090;
+}
 #phone
 {
     background-color:rgb(255,255,255);
