--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,9 @@ h1
 {
     text-decoration: bold;
 }
+a{
+    color: black;
+}
 a.menu{
     color: #101010;
     text-shadow:-1px -1px #909090;
@@ -30,7 +33,6 @@ a.menu{
 #home_left
 {
     box-sizing: border-box;
-    padding: 1%;
     position: absolute;
     width: 50.5%;
     left: -3px;
@@ -40,10 +42,12 @@ a.menu{
     border: 3px solid rgb(6, 4, 100);
     border-top: 3px solid rgb(6, 4, 100);
     border-bottom: 3px solid rgb(6, 4, 100);
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
 }
 #home_right{
     box-sizing: border-box;
-    padding: 1%;
     position: absolute;
     width: 50.5%;
     right: -3px;
@@ -53,10 +57,10 @@ a.menu{
     border-top: 3px solid rgb(6, 4, 100);
     border-bottom: 3px solid rgb(6, 4, 100);
     border-left: 3px solid rgb(6, 4, 100);
+    text-align: center;
 }
 #home_top{
     background-color:rgb(127,127,127);
-
     box-sizing: border-box;
     position: absolute;
     width:100%;
@@ -66,11 +70,13 @@ a.menu{
 }
 #home_bottom{
     box-sizing: border-box;
-    padding:1%;
     position: absolute;
     height:35%;
     bottom: 0%;
     width:100%;
+    left:0%;
+    padding-top: 2%;
+    padding-left:2%;
 }
 #menu_button
 {
@@ -101,7 +107,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: 'Arial Black';
-    color: white;
 }
 #menu_box_2
 {
@@ -120,7 +125,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: 'Arial Black';
-    color: white;
 }
 #menu_box_3
 {
@@ -138,7 +142,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_4
 {
@@ -157,7 +160,6 @@ a.menu{
     text-align: center;
     font-size: 1.5rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_5
 {
@@ -175,7 +177,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_6
 {
@@ -194,7 +195,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_7
 {
@@ -213,7 +213,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_8
 {
@@ -232,7 +231,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 
 #menu_box_9
@@ -251,7 +249,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_10
 {
@@ -270,7 +267,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_11
 {
@@ -288,7 +284,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_12
 {
@@ -307,7 +302,6 @@ a.menu{
     text-align: center;
     font-size: 1.5rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_13
 {
@@ -325,7 +319,6 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
 #menu_box_14
 {
@@ -344,5 +337,4 @@ a.menu{
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
 }
