--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,8 @@ a.menu{
     border-left: 3px solid rgb(6, 4, 100);
     text-align: center;
 }
-#home_top{
+#menu
+{
     background-color:rgb(127,127,127);
     box-sizing: border-box;
     position: absolute;
@@ -77,6 +78,15 @@ a.menu{
     left:0%;
     padding-top: 2%;
     padding-left:2%;
+}
+#customizeBar{
+    box-sizing: border-box;
+    position: absolute;
+    left:25%;
+    bottom: -4.3%;
+    width:100%;
+    z-index: 3;
+    margin:auto;
 }
 #menu_button
 {
@@ -103,9 +113,10 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: 'Arial Black';
 }
 #menu_box_2
@@ -121,7 +132,8 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
     font-size: 2rem;
     font-family: 'Arial Black';
@@ -138,7 +150,8 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
@@ -147,7 +160,6 @@ a.menu{
 {
     border: 1px solid rgb(0, 0, 0);
     box-sizing: border-box;
-    padding:1%;
     position: absolute;
     height:14.3%;
     width: 50%;
@@ -156,9 +168,10 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 3rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: "Arial Black";
 }
 #menu_box_5
@@ -173,9 +186,10 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: "Arial Black";
 }
 #menu_box_6
@@ -191,9 +205,10 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 4rem;
     font-family: "Arial Black";
 }
 #menu_box_7
@@ -209,9 +224,10 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: "Arial Black";
 }
 #menu_box_8
@@ -227,7 +243,8 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
@@ -245,7 +262,8 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
@@ -263,7 +281,8 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
@@ -280,16 +299,16 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: "Arial Black";
 }
 #menu_box_12
 {
     border: 1px solid rgb(0, 0, 0);
     box-sizing: border-box;
-    padding:1%;
     position: absolute;
     height:14.3%;
     width: 50%;
@@ -298,9 +317,10 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 3rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: "Arial Black";
 }
 #menu_box_13
@@ -315,7 +335,8 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
@@ -333,8 +354,9 @@ a.menu{
     background-color:rgb(90, 90, 90);
     opacity: 1;
     z-index:3;
-    line-height: 8rem;
+    line-height: 5rem;
+    vertical-align: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: 3rem;
     font-family: "Arial Black";
 }
