--- a/stylesheet.css
+++ b/stylesheet.css
@@ -264,6 +264,79 @@ a.menu{
 	top:1px;
 }
 
+#top-left-diag {
+
+    box-sizing: border-box;
+    padding: 3%;
+    position: absolute;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2rem;
+    width: 50.5%;
+    left: -3px;
+    height: 45%;
+    top: 10%;
+    bottom: 10%;
+    border: 3px solid rgb(6, 4, 100);
+    border-top: 3px solid rgb(6, 4, 100);
+    border-bottom: 3px solid rgb(6, 4, 100);
+
+}
+
+#top-right-diag {
+
+    box-sizing: border-box;
+    padding: 3%;
+    position: absolute;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2rem;
+    width: 50%;
+    right: 0px;
+    height: 45%;
+    top: 10%;
+    bottom: 10%;
+    border-top: 3px solid rgb(6, 4, 100);
+    border-bottom: 3px solid rgb(6, 4, 100);
+    border-left: 3px solid rgb(6, 4, 100);
+
+}
+
+#bottom-left-diag {
+
+    box-sizing: border-box;
+    padding: 3%;
+    position: absolute;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2rem;
+    width: 50.5%;
+    left: -3px;
+    height: 45%;
+    top: 55%;
+    bottom: 10%;
+    border-right: 3px solid rgb(6, 4, 100);
+    
+
+}
+
+#bottom-right-diag {
+
+    box-sizing: border-box;
+    padding: 3%;
+    position: absolute;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 2rem;
+    width: 50.5%;
+    left: 50%;
+    height: 45%;
+    top: 55%;
+    bottom: 10%;
+    /* border: 3px solid rgb(6, 4, 100); */
+
+}
+
 #home_left
 {
     box-sizing: border-box;
