--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,19 @@ a.menu{
     background-size: cover;
     background-position: center;
 }
-#home_right{
+#radio_main
+{
+    box-sizing: border-box;
+    position: absolute;
+    right: -3px;
+    height: 55%;
+    top: 10%;
+    bottom: 10%;
+    text-align: center;
+    width:100%;
+}
+#home_right
+{
     box-sizing: border-box;
     position: absolute;
     width: 50.5%;
@@ -99,6 +111,26 @@ a.menu{
     background-color:rgb(110, 110, 110);
     opacity: 1;
     z-index:2;
+}
+#homeMenu
+{
+    border: 1px solid rgb(0, 0, 0);
+    box-sizing: border-box;
+    padding:1%;
+    position: absolute;
+    /* height:20%; */
+    height: 100%;
+    width: 50%;
+    top: 0%;
+    background-color:rgb(90, 90, 90);
+    opacity: 1;
+    z-index:3;
+    line-height: 5rem;
+    vertical-align: center;
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Arial Black';
+    right: 0%;
 }
 #menu_box_1
 {
