--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,7 @@ h1
 }
 a{
     color: black;
+    text-decoration: none;
 }
 a.menu{
     color: #101010;
@@ -390,5 +391,70 @@ a.menu{
     vertical-align: center;
     text-align: center;
     font-size: 3rem;
+    font-family: "Arial Black";
+}
+#newDriver_topLeft
+{
+    border-right: 1px solid rgb(0, 0, 0);
+    position: absolute;
+    width:50%;
+    height:45%;
+    top:10%;
+    left:0%;
+    line-height: 15rem;
+    font-size: 3rem;
+    margin: auto;
+    text-align: center;
+    font-family: "Arial Black";
+    padding-top:3%;
+}
+#newDriver_topRight
+{
+    position: absolute;
+    width:50%;
+    height:45%;
+    top:10%;
+    right:0%;
+    line-height: 5rem;
+    font-size: 3rem;
+    margin: auto;
+    text-align: center;
+    font-family: "Arial Black";
+}
+#newDriver_botLeft
+{
+    border-right: 1px solid rgb(0, 0, 0);
+    border-top: 1px solid rgb(0, 0, 0);
+    position: absolute;
+    width:50%;
+    height:40.6%;
+    left:0%;
+    top: 55%;
+    font-size: 3rem;
+    font-family: "Arial Black";
+    text-align: center;
+    padding-top: 3%;
+}
+#newDriver_botRight
+{
+    border-top: 1px solid rgb(0, 0, 0);
+    position: absolute;
+    width:50%;
+    height:35%;
+    right:0%;
+    top: 55%;
+    font-size: 3rem;
+    margin: auto;
+    text-align: center;
+    font-family: "Arial Black";
+    padding-top: 9%;
+}
+ol.newDriver{
+    font-family: "Arial Black";
+    font-size: 200%;
+    line-height: 150%;
+}
+p.newDriver{
+    font-size:300%;
     font-family: "Arial Black";
 }
