--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,6 +19,10 @@ a.menu{
     color: #101010;
     text-shadow:-1px -1px #909090;
 }
+a.ecButton{
+    color: #101010;
+    text-shadow: -1px -1px #909090;
+}
 #phone
 {
     background-color:rgb(255,255,255);
@@ -393,6 +397,12 @@ a.menu{
     font-size: 3rem;
     font-family: "Arial Black";
 }
+#current{
+    position: absolute;
+    margin-top: 8.5%;
+    margin-left: 40%;
+    font-size: 115%;
+}
 #dotw
 {
     position: absolute;
@@ -400,6 +410,7 @@ a.menu{
     margin-left: 16.5%;
     text-align: center;
     word-spacing: 3rem;
+    font-size: 115%;
 }
 #dotw_icons
 {
@@ -407,7 +418,7 @@ a.menu{
     margin-top: 24%;
     margin-left: 14.5%;
     height: 50%;
-    word-spacing: .5rem;
+    word-spacing: .25rem;
 }
 #dotw_temps
 {
@@ -417,4 +428,128 @@ a.menu{
     margin-left: 17%;
     text-align: center;
     word-spacing: 2.75rem;
+}
+#diag{
+    position: absolute;
+    margin-top: 10%;
+    margin-left: 20%;
+    text-align: left;
+    font-size: 115%;
+}
+#errorCodes{
+    position: absolute;
+    box-sizing: border-box;
+    height:15%;
+    bottom: 0%;
+    width: 25%;
+    right:0%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-left:3%;
+    background-color: #909090;
+    font-size: 2rem;
+    text-align: center;
+}
+#ec_main{
+    position: absolute;
+    margin-top: 10%;
+    margin-left: 25%;
+}
+#hvac{
+    position: absolute;
+    margin-top: 15%;
+    margin-left: 17.5%;
+}
+#seats{
+    position: absolute;
+    margin-top: 40%;
+    margin-left: 40%;
+}
+#gesture{
+    position: absolute;
+    margin-top: 15%;
+    margin-left: 15%;
+}
+#voice{
+    position: absolute;
+    margin-top: 40%;
+    margin-left: 42%;
+}
+#modes{
+    position: absolute;
+    margin-top: 15%;
+    margin-left: 22.5%;
+}
+#dr_modes{
+    position: absolute;
+    margin-top: 30%;
+    margin-left: 20%;
+    word-spacing: 2.5rem;
+}
+#language{
+    position: absolute;
+    margin-top: 45%;
+    margin-left: 20%;
+}
+.switch{
+    position: absolute;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.slider:before{
+    position: absolute;
+    content: "";
+    height: 27px;
+    width: 27px;
+    left: 1px;
+    top: 4%;
+    bottom: 4px;
+    background-color: grey;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+input:checked + .slider{
+    background-color: #2196F3;
+}
+input:focus + .slider{
+    box-shadow: 0 0 1px #2196F3;
+}
+input:checked + .slider:before{
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
+}
+#switch1{
+    position: absolute;
+    margin-top: 30%;
+    margin-left: 40%;
+}
+#scanEC{
+    position: absolute;
+    margin-top: 61%;
+    margin-left: 80%;
+}
+#x1{
+    position: absolute;
+    margin-top: -2.5%;
+    margin-left: 40%;
+    
+}
+#x2{
+    position: absolute;
+    margin-top: -2.5%;
+    margin-left: -10%;
+}
+#cs_menu{
+    position: absolute;
+    margin-top: 6.5%;
+    margin-left: 58%;
+    height: 80%;
+    width: 80%;
 }
