Small fix to Fleet, forgot hyperlinks to Diagnostics page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,12 @@ a.ecButton{
     color: #101010;
     text-shadow: -1px -1px #909090;
 }
+
+a.href {
+
+    text-decoration: none;
+
+}
 #phone
 {
     background-color:rgb(255,255,255);
