--- a/stylesheet.css
+++ b/stylesheet.css
@@ -155,7 +155,7 @@ a.href {
     width: 20%;
     margin: 2%;
     /* padding: 1%; */
-    border: 5px solid green;
+    border: 5px solid white;
     border-radius: 5px;
     display: inline-block;
     overflow: hidden;
@@ -179,7 +179,7 @@ a.href {
     /* padding-bottom: 2%; */
     min-width: 20%;
     min-height: 25%;
-    top: 325%;
+    top: 317%;
     text-align: center;
     font-size: 0.5vw;
     font-family: 'Arial Black';
@@ -197,7 +197,7 @@ a.href {
     /* padding-bottom: 2%; */
     min-width: 20%;
     min-height: 25%;
-    top: 608%;
+    top: 598%;
     text-align: center;
     font-size: 0.5vw;
     font-family: 'Arial Black';
@@ -215,7 +215,7 @@ a.href {
     /* padding-bottom: 2%; */
     min-width: 20%;
     min-height: 25%;
-    top: 888%;
+    top: 878%;
     text-align: center;
     font-size: 0.5vw;
     font-family: 'Arial Black';
