--- a/stylesheet.css
+++ b/stylesheet.css
@@ -512,8 +512,8 @@ a.href {
     text-align: center;
     font-size: 3rem;
     font-family: 'Arial Black';
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px white; */
 }
 #menu_box_2
 {
@@ -533,8 +533,8 @@ a.href {
     text-align: center;
     font-size: 2rem;
     font-family: 'Arial Black';
-    color: white;
-    text-shadow: 2px 0px gray;
+    color:rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_3
 {
@@ -553,8 +553,8 @@ a.href {
     text-align: center;
     font-size: 1.5rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color:rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_4
 {
@@ -573,8 +573,8 @@ a.href {
     text-align: center;
     font-size: 3rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_5
 {
@@ -593,8 +593,8 @@ a.href {
     text-align: center;
     font-size: 3rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_6
 {
@@ -614,8 +614,8 @@ a.href {
     text-align: center;
     font-size: 3rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_7
 {
@@ -633,10 +633,10 @@ a.href {
     line-height: 5rem;
     vertical-align: center;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_8
 {
@@ -656,8 +656,8 @@ a.href {
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 
 #menu_box_9
@@ -677,8 +677,8 @@ a.href {
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_10
 {
@@ -698,8 +698,8 @@ a.href {
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_11
 {
@@ -718,8 +718,8 @@ a.href {
     text-align: center;
     font-size: 3rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_12
 {
@@ -738,8 +738,8 @@ a.href {
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_13
 {
@@ -758,8 +758,8 @@ a.href {
     text-align: center;
     font-size: 2rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #menu_box_14
 {
@@ -779,8 +779,8 @@ a.href {
     text-align: center;
     font-size: 3rem;
     font-family: "Arial Black";
-    color: white;
-    text-shadow: 2px 0px gray;
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px gray; */
 }
 #newDriver_topLeft
 {
@@ -795,6 +795,7 @@ a.href {
     margin: auto;
     text-align: center;
     font-family: "Arial Black";
+    color: rgb(0, 41, 129);
     padding-top:3%;
 }
 #newDriver_topRight
@@ -809,6 +810,7 @@ a.href {
     margin: auto;
     text-align: center;
     font-family: "Arial Black";
+    color: rgb(0, 41, 129);
 }
 #newDriver_botLeft
 {
@@ -821,6 +823,7 @@ a.href {
     top: 55%;
     font-size: 3rem;
     font-family: "Arial Black";
+    color: rgb(0, 41, 129);
     text-align: center;
     padding-top: 3%;
 }
@@ -836,6 +839,7 @@ a.href {
     margin: auto;
     text-align: center;
     font-family: "Arial Black";
+    color: rgb(0, 41, 129);
     padding-top: 9%;
 }
 ol.newDriver{
@@ -848,7 +852,7 @@ p.newDriver{
     font-family: "Arial Black";
 }
 p.trafficSubTitle{
-    color: white;
+    color: rgb(0, 41, 129);
     font-size:200%;
     font-family: "Arial Black";
 }
