--- a/stylesheet.css
+++ b/stylesheet.css
@@ -462,6 +462,19 @@ a.href {
     opacity: 1;
     z-index:2;
 }
+#simple_menu_button
+{
+    border: 3px solid rgb(6, 4, 100);
+    box-sizing: border-box;
+    position: absolute;
+    height:40%;
+    width: 45%;
+    top: 10%;
+    background-color:rgb(128, 204, 255);
+    opacity: 1;
+    z-index:2;
+}
+
 #homeMenu
 {
     border: 1px solid rgb(0, 0, 0);
@@ -516,6 +529,93 @@ a.href {
     height: 20%;
     width: 50%;
     top: 0%;
+    background-color:rgb(0, 153, 255);
+
+    opacity: 1;
+    z-index:3;
+    line-height: 5rem;
+    vertical-align: center;
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Arial Black';
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px white; */
+}
+#simple_menu_box_1
+{
+    border: 1px solid rgb(0, 0, 0);
+    box-sizing: border-box;
+    padding:1%;
+    position: absolute;
+    /* height:20%; */
+    height: 50%;
+    width: 50%;
+    top: 0%;
+    background-color:rgb(0, 153, 255);
+
+    opacity: 1;
+    z-index:3;
+    line-height: 5rem;
+    vertical-align: center;
+    text-align: center;
+    font-size: 2.4rem;
+    font-family: 'Arial Black';
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px white; */
+}
+#simple_menu_box_2
+{
+    border: 1px solid rgb(0, 0, 0);
+    box-sizing: border-box;
+    padding:1%;
+    position: absolute;
+    /* height:20%; */
+    height: 50%;
+    width: 50%;
+    top: 0%;
+    background-color:rgb(0, 153, 255);
+    right:0%;
+    opacity: 1;
+    z-index:3;
+    line-height: 5rem;
+    vertical-align: center;
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Arial Black';
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px white; */
+}
+#simple_menu_box_3
+{
+    border: 1px solid rgb(0, 0, 0);
+    box-sizing: border-box;
+    padding:1%;
+    position: absolute;
+    /* height:20%; */
+    height: 50%;
+    width: 50%;
+    top: 50%;
+    background-color:rgb(0, 153, 255);
+    opacity: 1;
+    z-index:3;
+    line-height: 5rem;
+    vertical-align: center;
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Arial Black';
+    color: rgb(0, 41, 129);
+    /* text-shadow: 2px 0px white; */
+}
+#simple_menu_box_4
+{
+    border: 1px solid rgb(0, 0, 0);
+    box-sizing: border-box;
+    padding:1%;
+    position: absolute;
+    height: 50%;
+    width: 50%;
+    top: 50%;
+    right:0%;
     background-color:rgb(0, 153, 255);
 
     opacity: 1;
